--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.13",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.2",
     "pug": "^3.0.2",
     "request": "^2.88.2"
   },
