--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NODE_ENV ='development'
 MONGO_URI ='mongodb://localhost/red_bicicletas'
+ethereal_user ='shanel.rempel@ethereal.email'
+ethereal_pwd = 'Z3VjR5gUHgV3kKCGu4'
