--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ MONGO_URI ='mongodb://localhost/red_bicicletas'
 ethereal_user ='shanel.rempel@ethereal.email'
 ethereal_pwd = 'Z3VjR5gUHgV3kKCGu4'
 GOOGLE_CLIENT_ID = '942473982255-aubfpluujkfh94jmdd4reb8jb4j54uol.apps.googleusercontent.com'
+HOST = 'localhost:300'
