--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ NODE_ENV ='development'
 MONGO_URI ='mongodb://localhost/red_bicicletas'
 ethereal_user ='shanel.rempel@ethereal.email'
 ethereal_pwd = 'Z3VjR5gUHgV3kKCGu4'
-GOOGLE_CLIENT_ID = '942473982255-aubfpluujkfh94jmdd4reb8jb4j54uol.apps.googleusercontent.com'
+GOOGLE_CLIENT_ID = '942473982255-hijk2usk073l7ho0qpoia3ass7oi80ao.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET = '1Saj-OxhOOK7HN7gj6akS3Yw'
+FACEBOOK_ID = '6058737594201561'
+FACEBOOK_SECRET = '962e5e566eb413aaaf52e36927b5ad21'
 HOST = 'localhost:300'
