--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ GOOGLE_CLIENT_ID = '942473982255-hijk2usk073l7ho0qpoia3ass7oi80ao.apps.googleuse
 GOOGLE_CLIENT_SECRET = '1Saj-OxhOOK7HN7gj6akS3Yw'
 FACEBOOK_ID = '6058737594201561'
 FACEBOOK_SECRET = '962e5e566eb413aaaf52e36927b5ad21'
-HOST = 'localhost:300'
+HOST = 'localhost:3000'
+ETHEREAL_EMAIL_USER_DEV ='shanel.rempel@ethereal.email'
+ETHEREAL_EMAIL_PASS_DEV = 'Z3VjR5gUHgV3kKCGu4'
