--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.12.13",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "newrelic": "^7.5.1",
     "nodemailer": "^6.6.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
